src/App/comps/Dashboard/MyWords/MyWordsElem/MyWordsElem.scss
  .MyWords {

    &__elem {
      flex-grow: 1;
      background-color: #fff;
      border-radius: 15px;
      padding: 10px 8px 25px 12px;
      min-width: 100px;
    }

    &__elemDeleteAllButtonBody {
      display: flex;
      justify-content: flex-end;
    }

    &__elemDeleteAllButton {
      cursor: pointer;
      width: 15px;
      height: 15px;
      margin-left: 15px;
      transition: 0.5s all ease;
      color: rgba(168, 168, 168, 0.644);
      border-radius: 30%;

      &:hover {
        transform: scale(1.2);
        color: rgb(228, 25, 25);
      }
    }

    &__elemMainWord {
      cursor: pointer;
      margin-bottom: 10px;
      text-align: center;
      font-size: 26px;
      font-weight: bold;
      transition: 0.2s all ease;

      &:hover {
        color: rgb(228, 63, 206);
        transform: scale(1.2);
      }

    }

    &__elemTranslateRow {
      margin-top: 3px;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    &__elemTranslateWord {
      cursor: pointer;
      font-size: 20px;
      font-style: italic;
      display: inline;
      transition: 0.2s all ease;

      &:hover {
        color: rgb(228, 63, 206);
      }

      &_gameword {
        font-weight: bold;
        color: rgb(228, 63, 206);
      }

    }

    &__elemTranslateLanguage {
      font-size: 8px;
      display: inline;
      font-weight: normal;
    }

    &__elemDeleteButton {
      cursor: pointer;
      width: 25px;
      height: 25px;
      margin-left: 15px;
      transition: 0.5s all ease;
      color: rgba(168, 168, 168, 0.644);
      border-radius: 30%;

      &:hover {
        transform: scale(1.2);
        color: rgb(228, 25, 25);
      }
    }

  }

